# web2llm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: detect-release-state.yml  publish.yml  push.yaml  push.yml  release.yaml  release.yml
benches/: extraction.rs
benchmarks/: extraction_bench.rs
benchmarks/fixtures/: wikipedia.html
crates/web2llm/: Cargo.toml  README.md
crates/web2llm-cli/: Cargo.toml  README.md
crates/web2llm-cli/src/: cli.rs  config.rs  error.rs  main.rs  output.rs
crates/web2llm-mcp/: Cargo.toml  README.md
crates/web2llm-mcp/src/: main.rs
crates/web2llm/examples/: basic.rs  batch.rs
crates/web2llm/src/: crawl.rs  output.rs
crates/web2llm/src/extract/: scorer.rs
crates/web2llm/src/fetch/: static_fetch.rs
crates/web2llm/src/preflight/: robots.rs  validate.rs
crates/web2llm/src/tokens/: mod.rs
crates/web2llm/tests/: batch.rs  content_scoring.rs
examples/: basic.rs  batch.rs  chunks.rs  crawl.rs  links.rs
src/: config.rs  crawl.rs  error.rs  lib.rs  main.rs  output.rs
src/extract/: mod.rs  scorer.rs
src/fetch/: dynamic_fetch.rs  mod.rs
src/preflight/: mod.rs  robots.rs  validate.rs
src/tokens/: mod.rs  optimize.rs
tests/: batch.rs  content_scoring.rs  crawl.rs  extract.rs  fetch.rs  pipeline.rs  scorer.rs
