[package]
name = "web2llm"
version = "0.1.1"
edition = "2024"
description = "Fetch web pages and convert to clean Markdown for LLM pipelines"
license = "MIT"
repository = "https://github.com/Quippy22/web2llm"
homepage = "https://github.com/Quippy22/web2llm"
readme = "README.md"
keywords = ["web", "scraping", "markdown", "llm", "rag"]
categories = ["web-programming", "text-processing"]

[dependencies]
chrono = "0.4.44"
futures = "0.3.32"
governor = "0.10.4"
htmd = "0.5.0"
reqwest = { version = "0.13", features = ["native-tls"] }
scraper = "0.25.0"
texting_robots = "0.2.2"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
tempfile = "3.10"
wiremock = "0.6.5"

[[bench]]
name = "extraction"
harness = false
